--- a/Main.ipynb
+++ b/Main.ipynb
@@ -33,27 +33,27 @@
           "base_uri": "https://localhost:8080/",
           "height": 224
         },
-        "outputId": "7079c533-ac33-49c6-a410-53441da6916d"
+        "outputId": "1bd77e9a-d45e-4000-ce42-f4295e56d669"
       },
       "source": [
         "!pip install category_encoders==2.0.0"
       ],
-      "execution_count": 184,
+      "execution_count": 207,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Requirement already satisfied: category_encoders==2.0.0 in /usr/local/lib/python3.6/dist-packages (2.0.0)\n",
-            "Requirement already satisfied: patsy>=0.4.1 in /usr/local/lib/python3.6/dist-packages (from category_encoders==2.0.0) (0.5.1)\n",
-            "Requirement already satisfied: scikit-learn>=0.20.0 in /usr/local/lib/python3.6/dist-packages (from category_encoders==2.0.0) (0.21.3)\n",
-            "Requirement already satisfied: scipy>=0.19.0 in /usr/local/lib/python3.6/dist-packages (from category_encoders==2.0.0) (1.3.1)\n",
-            "Requirement already satisfied: statsmodels>=0.6.1 in /usr/local/lib/python3.6/dist-packages (from category_encoders==2.0.0) (0.10.1)\n",
-            "Requirement already satisfied: numpy>=1.11.3 in /usr/local/lib/python3.6/dist-packages (from category_encoders==2.0.0) (1.16.5)\n",
             "Requirement already satisfied: pandas>=0.21.1 in /usr/local/lib/python3.6/dist-packages (from category_encoders==2.0.0) (0.24.2)\n",
-            "Requirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from patsy>=0.4.1->category_encoders==2.0.0) (1.12.0)\n",
-            "Requirement already satisfied: joblib>=0.11 in /usr/local/lib/python3.6/dist-packages (from scikit-learn>=0.20.0->category_encoders==2.0.0) (0.13.2)\n",
+            "Requirement already satisfied: statsmodels>=0.6.1 in /usr/local/lib/python3.6/dist-packages (from category_encoders==2.0.0) (0.10.1)\n",
+            "Requirement already satisfied: scipy>=0.19.0 in /usr/local/lib/python3.6/dist-packages (from category_encoders==2.0.0) (1.3.1)\n",
+            "Requirement already satisfied: scikit-learn>=0.20.0 in /usr/local/lib/python3.6/dist-packages (from category_encoders==2.0.0) (0.21.3)\n",
+            "Requirement already satisfied: patsy>=0.4.1 in /usr/local/lib/python3.6/dist-packages (from category_encoders==2.0.0) (0.5.1)\n",
+            "Requirement already satisfied: numpy>=1.11.3 in /usr/local/lib/python3.6/dist-packages (from category_encoders==2.0.0) (1.16.5)\n",
             "Requirement already satisfied: python-dateutil>=2.5.0 in /usr/local/lib/python3.6/dist-packages (from pandas>=0.21.1->category_encoders==2.0.0) (2.5.3)\n",
-            "Requirement already satisfied: pytz>=2011k in /usr/local/lib/python3.6/dist-packages (from pandas>=0.21.1->category_encoders==2.0.0) (2018.9)\n"
+            "Requirement already satisfied: pytz>=2011k in /usr/local/lib/python3.6/dist-packages (from pandas>=0.21.1->category_encoders==2.0.0) (2018.9)\n",
+            "Requirement already satisfied: joblib>=0.11 in /usr/local/lib/python3.6/dist-packages (from scikit-learn>=0.20.0->category_encoders==2.0.0) (0.13.2)\n",
+            "Requirement already satisfied: six in /usr/local/lib/python3.6/dist-packages (from patsy>=0.4.1->category_encoders==2.0.0) (1.12.0)\n"
           ],
           "name": "stdout"
         }
@@ -106,7 +106,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 462
         },
-        "outputId": "18cafe57-42c5-4788-eb78-e2d3bc075248"
+        "outputId": "6aa2bfff-eeb0-44bf-e164-12a00033ec2e"
       },
       "source": [
         "# Load SF real estate data - 10 years (2009-2018) of single family home sales in San Francisco downloaded from the SF MLS\n",
@@ -120,7 +120,7 @@
         "print(df.shape)\n",
         "df.head(5)"
       ],
-      "execution_count": 186,
+      "execution_count": 209,
       "outputs": [
         {
           "output_type": "stream",
@@ -421,7 +421,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 186
+          "execution_count": 209
         }
       ]
     },
@@ -434,13 +434,13 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "e9c57078-aa6a-4588-ba9a-8707b1168e2b"
+        "outputId": "d5691096-03fd-426e-9b7b-de6e1a97d315"
       },
       "source": [
         "# Baseline of sale_price\n",
         "df['sale_price'].mean()"
       ],
-      "execution_count": 187,
+      "execution_count": 210,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -452,7 +452,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 187
+          "execution_count": 210
         }
       ]
     },
@@ -465,7 +465,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 51
         },
-        "outputId": "ff94d674-37db-4611-cb84-3477d3ca49a6"
+        "outputId": "5772fba4-49d0-4244-f6fb-2f6f8728a29e"
       },
       "source": [
         "# Train, test split on date of 01/01/2018\n",
@@ -486,7 +486,7 @@
         "print(train.shape)\n",
         "print(test.shape)"
       ],
-      "execution_count": 188,
+      "execution_count": 211,
       "outputs": [
         {
           "output_type": "stream",
@@ -507,7 +507,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000
         },
-        "outputId": "96f0e147-055a-4f04-c750-875d6c1183e7"
+        "outputId": "187e3f14-ddfe-4c4b-a3c6-38730d8739e6"
       },
       "source": [
         "# Wrangle the data for train and test\n",
@@ -617,7 +617,7 @@
         "\n",
         "train.head()"
       ],
-      "execution_count": 189,
+      "execution_count": 212,
       "outputs": [
         {
           "output_type": "stream",
@@ -848,7 +848,7 @@
               "      <td>2013</td>\n",
               "      <td>3</td>\n",
               "      <td>14</td>\n",
-              "      <td>8</td>\n",
+              "      <td>2</td>\n",
               "      <td>468.227425</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -886,7 +886,7 @@
               "      <td>2015</td>\n",
               "      <td>12</td>\n",
               "      <td>3</td>\n",
-              "      <td>5</td>\n",
+              "      <td>4</td>\n",
               "      <td>441.116126</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -924,7 +924,7 @@
               "      <td>2017</td>\n",
               "      <td>5</td>\n",
               "      <td>18</td>\n",
-              "      <td>5</td>\n",
+              "      <td>4</td>\n",
               "      <td>587.216018</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -962,7 +962,7 @@
               "      <td>2010</td>\n",
               "      <td>6</td>\n",
               "      <td>27</td>\n",
-              "      <td>8</td>\n",
+              "      <td>2</td>\n",
               "      <td>544.969512</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -1000,7 +1000,7 @@
               "      <td>2012</td>\n",
               "      <td>6</td>\n",
               "      <td>7</td>\n",
-              "      <td>8</td>\n",
+              "      <td>2</td>\n",
               "      <td>482.310251</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
@@ -1009,11 +1009,11 @@
             ],
             "text/plain": [
               "   longitude   latitude  elevation  ...  day_on_market  cluster    price_sf\n",
-              "0 -122.50965  37.780280     200.83  ...             14        8  468.227425\n",
-              "1 -122.50929  37.762608      23.21  ...              3        5  441.116126\n",
-              "2 -122.50929  37.762608      23.21  ...             18        5  587.216018\n",
-              "3 -122.50924  37.777330     189.11  ...             27        8  544.969512\n",
-              "4 -122.50919  37.776695     175.89  ...              7        8  482.310251\n",
+              "0 -122.50965  37.780280     200.83  ...             14        2  468.227425\n",
+              "1 -122.50929  37.762608      23.21  ...              3        4  441.116126\n",
+              "2 -122.50929  37.762608      23.21  ...             18        4  587.216018\n",
+              "3 -122.50924  37.777330     189.11  ...             27        2  544.969512\n",
+              "4 -122.50919  37.776695     175.89  ...              7        2  482.310251\n",
               "\n",
               "[5 rows x 35 columns]"
             ]
@@ -1021,7 +1021,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 189
+          "execution_count": 212
         }
       ]
     },
@@ -1034,7 +1034,7 @@
           "base_uri": "https://localhost:8080/",
           "height": 34
         },
-        "outputId": "b7dd00e5-7e9c-45d7-aff0-feee21d2c426"
+        "outputId": "bd3f952b-f6da-4886-e89c-c27a9bc0bdb0"
       },
       "source": [
         "# Train\n",
@@ -1044,7 +1044,7 @@
         "val  = temp[temp['year_sold'] >= 2017]\n",
         "print(train.shape, val.shape, test.shape)"
       ],
-      "execution_count": 190,
+      "execution_count": 213,
       "outputs": [
         {
           "output_type": "stream",
@@ -1058,154 +1058,18 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "nYZJUyRYzxEm",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 629
-        },
-        "outputId": "e681fd68-1b87-487a-e3ee-d1dab26950e9"
-      },
-      "source": [
-        "train.isna().sum()"
-      ],
-      "execution_count": 191,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "longitude          0\n",
-              "latitude           0\n",
-              "elevation          0\n",
-              "zip                0\n",
-              "area               0\n",
-              "district_no        0\n",
-              "nid                0\n",
-              "cdom               0\n",
-              "orig_list_price    0\n",
-              "sale_price         0\n",
-              "rooms              0\n",
-              "baths              0\n",
-              "beds               0\n",
-              "sf                 0\n",
-              "lot_acres          0\n",
-              "lot_sf             0\n",
-              "year_built         0\n",
-              "zoning             0\n",
-              "lot_desc           0\n",
-              "drive_side         0\n",
-              "parking            0\n",
-              "park_leased        0\n",
-              "num_parking        0\n",
-              "shopping           0\n",
-              "transportation     0\n",
-              "type               0\n",
-              "views              0\n",
-              "year_sold          0\n",
-              "month_sold         0\n",
-              "day_sold           0\n",
-              "year_on_market     0\n",
-              "month_on_market    0\n",
-              "day_on_market      0\n",
-              "cluster            0\n",
-              "price_sf           0\n",
-              "dtype: int64"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 191
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "U54USXhY0hdV",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 629
-        },
-        "outputId": "bbf0ad4d-3625-44bd-c456-2ab5ef46e910"
-      },
-      "source": [
-        "train.dtypes"
-      ],
-      "execution_count": 192,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "longitude          float64\n",
-              "latitude           float64\n",
-              "elevation          float64\n",
-              "zip                  int64\n",
-              "area                 int64\n",
-              "district_no          int64\n",
-              "nid                  int64\n",
-              "cdom                 int64\n",
-              "orig_list_price      int64\n",
-              "sale_price           int64\n",
-              "rooms              float64\n",
-              "baths              float64\n",
-              "beds                 int64\n",
-              "sf                   int64\n",
-              "lot_acres          float64\n",
-              "lot_sf             float64\n",
-              "year_built           int64\n",
-              "zoning              object\n",
-              "lot_desc            object\n",
-              "drive_side          object\n",
-              "parking             object\n",
-              "park_leased         object\n",
-              "num_parking          int64\n",
-              "shopping            object\n",
-              "transportation      object\n",
-              "type                object\n",
-              "views               object\n",
-              "year_sold            int64\n",
-              "month_sold           int64\n",
-              "day_sold             int64\n",
-              "year_on_market       int64\n",
-              "month_on_market      int64\n",
-              "day_on_market        int64\n",
-              "cluster              int32\n",
-              "price_sf           float64\n",
-              "dtype: object"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 192
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
         "id": "kFxdeaqTEMzC",
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 275
         },
-        "outputId": "d9f3c30f-f0d9-4a78-dea4-48904bcbc028"
+        "outputId": "4c497aa6-c27b-4337-866d-a9edb22cb2c7"
       },
       "source": [
         "# Encode and fit a linear regression model\n",
-        "#encoder = OrdinalEncoder()\n",
-        "#encoder.fit_transform(train)\n",
         "\n",
         "target = 'sale_price'\n",
-        "#features = train.select_dtypes('number').columns.drop(target).tolist()\n",
-        "#features = ['longitude', 'latitude', 'elevation', 'zip', area', 'district_no', 'nid', 'cdom', 'orig_list_price', \n",
-        "#            'rooms', 'baths', 'beds', 'sf', 'num_parking', 'year_sold', 'month_sold', 'day_sold', \n",
-        "#            'year_on_market', 'month_on_market', 'day_on_market', 'cluster', 'price_sf']\n",
         "\n",
         "features = train.columns.drop(target)\n",
         "X_train = train[features]\n",
@@ -1233,14 +1097,14 @@
         "\n",
         "X_train.head()"
       ],
-      "execution_count": 206,
+      "execution_count": 214,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Test MAE: $213379\n",
-            "Validation Accuracy 0.8945824744250024\n",
-            "Test Accuracy 0.8111235105479564\n"
+            "Test MAE: $215550\n",
+            "Validation Accuracy 0.895061117877814\n",
+            "Test Accuracy 0.8041473051872419\n"
           ],
           "name": "stdout"
         },
@@ -1337,7 +1201,7 @@
               "      <td>2013</td>\n",
               "      <td>3</td>\n",
               "      <td>14</td>\n",
-              "      <td>8</td>\n",
+              "      <td>2</td>\n",
               "      <td>468.227425</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -1374,7 +1238,7 @@
               "      <td>2015</td>\n",
               "      <td>12</td>\n",
               "      <td>3</td>\n",
-              "      <td>5</td>\n",
+              "      <td>4</td>\n",
               "      <td>441.116126</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -1411,7 +1275,7 @@
               "      <td>2010</td>\n",
               "      <td>6</td>\n",
               "      <td>27</td>\n",
-              "      <td>8</td>\n",
+              "      <td>2</td>\n",
               "      <td>544.969512</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -1448,7 +1312,7 @@
               "      <td>2012</td>\n",
               "      <td>6</td>\n",
               "      <td>7</td>\n",
-              "      <td>8</td>\n",
+              "      <td>2</td>\n",
               "      <td>482.310251</td>\n",
               "    </tr>\n",
               "    <tr>\n",
@@ -1485,7 +1349,7 @@
               "      <td>2009</td>\n",
               "      <td>2</td>\n",
               "      <td>18</td>\n",
-              "      <td>5</td>\n",
+              "      <td>4</td>\n",
               "      <td>453.767123</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
@@ -1494,11 +1358,11 @@
             ],
             "text/plain": [
               "    longitude   latitude  elevation  ...  day_on_market  cluster    price_sf\n",
-              "0 -122.509650  37.780280     200.83  ...             14        8  468.227425\n",
-              "1 -122.509290  37.762608      23.21  ...              3        5  441.116126\n",
-              "3 -122.509240  37.777330     189.11  ...             27        8  544.969512\n",
-              "4 -122.509190  37.776695     175.89  ...              7        8  482.310251\n",
-              "6 -122.509186  37.761005      23.69  ...             18        5  453.767123\n",
+              "0 -122.509650  37.780280     200.83  ...             14        2  468.227425\n",
+              "1 -122.509290  37.762608      23.21  ...              3        4  441.116126\n",
+              "3 -122.509240  37.777330     189.11  ...             27        2  544.969512\n",
+              "4 -122.509190  37.776695     175.89  ...              7        2  482.310251\n",
+              "6 -122.509186  37.761005      23.69  ...             18        4  453.767123\n",
               "\n",
               "[5 rows x 34 columns]"
             ]
@@ -1506,7 +1370,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 206
+          "execution_count": 214
         }
       ]
     }
